--- a/pages/shop-pin-ganci.html
+++ b/pages/shop-pin-ganci.html
@@ -18,7 +18,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -29,7 +29,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -40,7 +40,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -51,7 +51,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -62,7 +62,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -73,7 +73,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -84,7 +84,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -95,7 +95,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -106,7 +106,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -117,7 +117,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -137,7 +137,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -149,7 +149,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -161,7 +161,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -173,7 +173,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -185,7 +185,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -197,7 +197,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -209,7 +209,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -221,7 +221,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -233,7 +233,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -245,7 +245,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -257,7 +257,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -269,7 +269,7 @@ permalink: /shop/pin-ganci/
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="{{ "/assets/img/pin_ganci/shop.jpg" | relative_url }}" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
