--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="http://use.typekit.net/ppe4usu.js"></script>
+        <script src="https://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
 
-        <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="/ico/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -125,7 +125,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -136,7 +136,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -147,7 +147,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -158,7 +158,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -171,7 +171,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -182,7 +182,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -193,7 +193,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -204,7 +204,7 @@
 			<div class="col-lg-3 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -311,7 +311,7 @@
 		<ul id="instafeed" class="clearfix unstyled">
 			<li class="default">
 				<a href="https://www.instagram.com/adiradjapin/" target="_blank" title="Follow adiradjapin">
-					<img src="assets/img/insta-promo.jpg" alt="">
+					<img src="/assets/img/insta-promo.jpg" alt="">
 				</a>
 			</li>
 		</ul>
@@ -371,10 +371,10 @@
 	</div>
 </footer>
 
-        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="assets/js/instafeed.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="/assets/js/instafeed.min.js"></script>
+        <script src="/assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
