--- a/shop/index.html
+++ b/shop/index.html
@@ -7,15 +7,15 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="http://use.typekit.net/ppe4usu.js"></script>
+        <script src="https://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
 
-        <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="/ico/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -126,7 +126,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -137,7 +137,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -148,7 +148,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -159,7 +159,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Ganci</span>
 								<div class="overlay"></div>
 							</div>
@@ -191,7 +191,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -202,7 +202,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">mug</span>
 								<div class="overlay"></div>
 							</div>
@@ -213,7 +213,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -224,7 +224,7 @@
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
@@ -291,10 +291,10 @@
 </footer>
 
 
-        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="assets/js/instafeed.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="/assets/js/instafeed.min.js"></script>
+        <script src="/assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
