--- a/shop/mug/index.html
+++ b/shop/mug/index.html
@@ -7,15 +7,15 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="http://use.typekit.net/ppe4usu.js"></script>
+        <script src="https://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
 
-        <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="/ico/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -110,7 +110,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -121,7 +121,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -132,7 +132,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -143,7 +143,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -154,7 +154,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -165,7 +165,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -176,7 +176,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -187,7 +187,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -198,7 +198,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -209,7 +209,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/mug/shop.jpg" alt="">
+						<img src="/assets/img/mug/shop.jpg" alt="">
 						<span class="cat">mug</span>
 						<div class="overlay"></div>
 					</div>
@@ -359,10 +359,10 @@
 	</div>
 </footer>
 
-        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="assets/js/instafeed.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="/assets/js/instafeed.min.js"></script>
+        <script src="/assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
