--- a/shop/pin-ganci/index.html
+++ b/shop/pin-ganci/index.html
@@ -7,15 +7,15 @@
         <meta name="description" content="Kami adalah produsen souvenir dan merchandise,  kami menawarkan harga yang terjangkau dengan kualitas terbaik.  Kami memproduksi PIN dan gantungan kunci.  Selain itu kami juga memproduksi MUG, Pakaian serta  berbagai souvenir &amp; merchandise lainnya.">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <script src="http://use.typekit.net/ppe4usu.js"></script>
+        <script src="https://use.typekit.net/ppe4usu.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <link rel="manifest" href="site.webmanifest">
 
-        <link rel="icon" type="image/png" href="ico/favicon-32x32.png" sizes="32x32" />
-        <link rel="icon" type="image/png" href="ico/favicon-16x16.png" sizes="16x16" />
+        <link rel="icon" type="image/png" href="/ico/favicon-32x32.png" sizes="32x32" />
+        <link rel="icon" type="image/png" href="/ico/favicon-16x16.png" sizes="16x16" />
 
-        <link rel="stylesheet" href="assets/css/main.css">
+        <link rel="stylesheet" href="/assets/css/main.css">
     </head>
     <body>
         <!--[if lte IE 9]>
@@ -115,7 +115,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -126,7 +126,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -137,7 +137,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -148,7 +148,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -159,7 +159,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -170,7 +170,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -181,7 +181,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -192,7 +192,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -203,7 +203,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -214,7 +214,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Pin</span>
 						<div class="overlay"></div>
 					</div>
@@ -234,7 +234,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -246,7 +246,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -258,7 +258,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -270,7 +270,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -282,7 +282,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -294,7 +294,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -306,7 +306,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -318,7 +318,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -330,7 +330,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -342,7 +342,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -354,7 +354,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -366,7 +366,7 @@
 			<div class="col-lg-2 col-sm-6">
 				<a href="#" class="item">
 					<div class="thumb">
-						<img src="assets/img/pin_ganci/shop.jpg" alt="">
+						<img src="/assets/img/pin_ganci/shop.jpg" alt="">
 						<span class="cat">Ganci</span>
 						<div class="overlay"></div>
 					</div>
@@ -577,10 +577,10 @@
 	</div>
 </footer>
 
-        <script src="assets/js/vendor/modernizr-3.5.0.min.js"></script>
-        <script src="assets/js/vendor/jquery-3.2.1.min.js"></script>
-        <script src="assets/js/instafeed.min.js"></script>
-        <script src="assets/js/main.js"></script>
+        <script src="/assets/js/vendor/modernizr-3.5.0.min.js"></script>
+        <script src="/assets/js/vendor/jquery-3.2.1.min.js"></script>
+        <script src="/assets/js/instafeed.min.js"></script>
+        <script src="/assets/js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
         <!-- <script>
