--- a/shop/index.html
+++ b/shop/index.html
@@ -122,27 +122,27 @@
 				<a href="/shop/pin-ganci/" class="btn btn-link">Show All</a>
 			</div>
 			<div class="col-lg-10 col-md-12 col-sm-12 shop-items">
-				<div class="row">
+				<div class="row">					
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/PIN_palastik_25.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
 							<div class="name">Plastik 25</div>
-							<small>Rp. 50,-</small>
+							<small class="mb-10">Rp. 50,-</small>
 						</a>
 					</div>
 					<div class="col-lg-3 col-sm-6 item-unit">
 						<a href="#" class="item">
 							<div class="thumb">
-								<img src="/assets/img/pin_ganci/shop.jpg" alt="">
+								<img src="/assets/img/pin_ganci/PIN_palastik_32.jpg" alt="">
 								<span class="cat">Pin</span>
 								<div class="overlay"></div>
 							</div>
 							<div class="name">Plastik 32</div>
-							<small>Rp. 65,-</small>
+							<small class="mb-10">Rp. 65,-</small>
 						</a>
 					</div>
 					<div class="col-lg-3 col-sm-6 item-unit">
